# concierge

./: .gitignore  ABOUT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
_legacy/: agent-skills  moltbot-memory-mcp  openclaw-root  openclaw-workspace  satiety-docs  satiety-pipeline  tool-requests  toolconcierge
adapters/claude-code/: README.md
adapters/claude_code/: README.md  __init__.py  backing_server.py  backing_server_registry.py  dispatcher.py  jsonrpc.py  logging_setup.py  resources.py  session.py  shim.py
alembic/: env.py
alembic/versions/: 103a85689166_harden_tools_enum_columns_with_check_.py  2fe7a135d9dd_add_lifecycle_state_column_with_backfill.py  4ff5b5898f71_baseline_existing_schema.py  50364025e26b_add_tools_path_and_tools_ambient_loading.py  771ddc8fcccf_drop_tools_is_active_column.py  7bdb4433afa8_add_tool_type_enum_and_backfill.py  7d29e49d52c5_add_tool_usage_events_table.py  c9d2f7a4e10b_add_on_demand_lifecycle_state.py  d8a3f0b62c14_add_tool_pin_status.py  e17b8137cade_add_request_escalation_target.py  e78148142145_add_install_method_provenance_column_.py  fa46ebdf05b9_add_tool_catalog_metadata_columns_and_.py
concierge_cli/: __init__.py  client.py  errors.py  main.py  output.py
concierge_cli/commands/: agent_config.py  list_active.py  recommend.py  request_tool.py
core/: __init__.py  app.py  catalog_reconcile.py  config.py  events.py  identity.py  identity_migration.py  lifecycle.py  lifecycle_policy.py  lifecycle_scanner.py  logging.py  memory.py  telemetry.py  tool_transitions.py
core/agent_config/: __init__.py  openclaw_writer.py
core/api/: __init__.py  events.py  health.py  packs.py  recommend.py  requests.py  scanner.py  schemas.py  stats.py  tools.py
core/db/: __init__.py  base.py  models.py  session.py
core/ingest/: __init__.py  catalog.py  manifest.py  skills.py  tool_requests.py
core/install/: __init__.py  methods.py  provenance.py  schemas.py  service.py  shims.py  venv.py
core/lifecycle_store/: __init__.py  escalation.py  schema.py  service.py  store.py  transitions.py  writer.py
core/prompts/: SKILL_FRAGMENT_SYNC_LOG.md  __init__.py  soul_delta.py  tool_awareness.py  tool_discovery.py  tool_lifecycle.py  tool_recommendation.py
core/recommend/: __init__.py  client.py  counters.py  parse.py  prompt.py  schemas.py  service.py  validator.py
docs/: close-the-gap-plan-2026-04-23.md  concierge-blueprint-v2.md  concierge-claude-code-plan-v3.md  concierge-operations-protocol.md  handoff-2026-04-23-scope-pivot.md
docs/archive/: ARCHIVED.md  concierge-claude-code-plan.md  concierge-setup-directions.md
planning/: architecture-map.md  build-plan.md  classification.md  close-the-gap-plan-2026-04-23.md  concierge-claude-code-plan-v3.md  concierge-operations-protocol.md  dependency-graph.md  executive-summary.md  gap-analysis.md  handoff-2026-04-23-scope-pivot.md  inventory.md  repo-structure-audit.md  today.md
planning/archive/: concierge-blueprint.md
planning/audits/: AUDIT-2026-04-23-blueprint-coverage.md
planning/decisions/: DECISIONS.md
planning/sessions/: SESSION-2026-04-20-01.md  SESSION-2026-04-21-01.md  SESSION-2026-04-21-02.md  SESSION-2026-04-22-01.md  SESSION-2026-04-22-02.md  SESSION-2026-04-22-03.md  SESSION-2026-04-23-01.md  SESSION-2026-04-24-01.md  SESSION-2026-04-25-01.md  SESSION-2026-04-25-02.md  SESSION-2026-04-25-03.md  SESSION-2026-04-26-01.md  SESSION-2026-04-27-01.md  SESSION-2026-04-28-01.md  SESSION-2026-04-29-01.md  (+4 more)
scripts/: concierge-shim  export_tool_manifest.py  ingest_tool_manifest.py  migrate_identity_notes.py  recommend_live_smoke.py  reconcile_catalog.py  verify_denial_recall.py
tests/: conftest.py  test_alembic_drift.py  test_api_packs.py  test_api_tools.py  test_app_lifespan.py  test_backing_server_integration.py  test_backing_server_unit.py  test_concierge_cli.py  test_concierge_cli_enable_disable.py  test_concierge_cli_errors.py  test_concierge_cli_list_active.py  test_concierge_cli_request_tool.py  test_db.py  test_db_isolation.py  test_enum_check_constraints.py  test_events.py  test_export.py  test_identity.py  test_identity_migration.py  test_ingest.py  test_ingest_catalog.py  test_ingest_skills.py  test_ingest_tool_manifest.py  test_install.py  test_install_method_provenance.py  test_integration_full_cycle.py  test_lifecycle.py  test_lifecycle_policy.py  test_lifecycle_scanner.py  test_lifecycle_service.py  test_lifecycle_service_escalation.py  test_lifecycle_store.py  test_lifecycle_store_escalation.py  test_lifecycle_transitions.py  test_lifecycle_writer.py  test_logging.py  test_mcp_resources.py  test_memory.py  test_memory_multistore.py  test_meta_tools_gap_preamble.py  (+42 more)
ui/: __init__.py  app.py  router.py
(+24 files in other folders)
