[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "concierge"
version = "0.1.0"
description = "Platform-agnostic tool awareness layer for AI agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "httpx>=0.26",
]

[tool.setuptools.packages.find]
include = ["core*", "ui*", "adapters*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "integration: heavy tests that load sentence-transformers and touch ChromaDB (slow first run)",
    "live_smoke: tests that call real external APIs (Anthropic); gated behind a valid API key. Never runs in CI.",
]
