[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "concierge"
version = "0.1.0"
description = "Platform-agnostic tool awareness layer for AI agents"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Lewis Sloan", email = "hello@satietyai.io" },
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "anthropic>=0.40.0",
    "sse-starlette>=2.0",
    "apscheduler>=3.10",
    "httpx>=0.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-timeout>=2.3",
]

[project.scripts]
concierge-shim = "adapters.claude_code.shim:main"

[project.urls]
Homepage = "https://satietyai.io"

[tool.setuptools.packages.find]
include = ["core*", "ui*", "adapters*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "integration: heavy tests that load sentence-transformers and touch ChromaDB (slow first run)",
    "live_smoke: tests that call real external APIs (Anthropic); gated behind a valid API key. Never runs in CI.",
    "slow: filesystem-touching integration tests that exercise real OS-level operations (real venv creation, real subprocess invocation, network access for pip install). Skipped in fast-iteration runs via `-m 'not slow'`.",
]
